--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,7 @@ language: python
 
 python:
   - 3.4
+  - 2.7
 
 env:
   - DJANGO=1.5.12 MIGRATE='true'
@@ -15,6 +16,7 @@ branches:
 install:
   - pip install -q Django==$DJANGO
   - pip install -r examples/chatserver/tests/requirements.txt
+  - pip2 install wsgiref==0.1.2
   - python setup.py -q install
 
 services:
