Updated examples requirements.txt and travis.yml.

--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,6 @@ language: python
 
 python:
   - 3.4
-  - 2.7
 
 env:
   - DJANGO=1.5.12 MIGRATE='true'
@@ -16,7 +15,7 @@ branches:
 install:
   - pip install -q Django==$DJANGO
   - pip install -r examples/chatserver/tests/requirements.txt
-  - pip2 install wsgiref==0.1.2
+#  - pip2 install wsgiref==0.1.2
   - python setup.py -q install
 
 services:
