--- a/.travis.yml
+++ b/.travis.yml
@@ -15,6 +15,7 @@ branches:
 install:
   - pip install -q Django==$DJANGO
   - pip install -r examples/chatserver/tests/requirements.txt
+  - cat examples/chatserver/tests/requirements.txt
   - python setup.py -q install
 
 services:
