--- a/examples/requirements.txt
+++ b/examples/requirements.txt
@@ -1,10 +1,10 @@
-Django==1.7.8
+Django>=1.7.8
 backports.ssl-match-hostname==3.4.0.2
-django-nose==1.4
-django-redis-sessions==0.4.0
-django-websocket-redis==0.4.4
-gevent==1.0.2
-greenlet==0.4.7
+django-nose>=1.4
+django-redis-sessions>=0.4.0
+django-websocket-redis>=0.4.4
+gevent>=1.0.2
+greenlet>=0.4.7
 nose==1.3.7
 redis==2.10.3
 requests==2.7.0
