--- a/examples/chatserver/tests/requirements.txt
+++ b/examples/chatserver/tests/requirements.txt
@@ -2,7 +2,7 @@ Django==1.7.8
 backports.ssl-match-hostname==3.4.0.2
 django-nose==1.4
 django-redis-sessions>=0.4.0
-django-websocket-redis>=0.4.4
+django-websocket-redis3>=0.4.4
 gevent>=1.0.2
 greenlet>=0.4.7
 nose==1.3.7
